# python_devcontainer

./: README.md  Taskfile.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
