[tool.poetry]
name = "python-devcontainer"
version = "0.1.0"
description = ""
authors = ["Ivan Lee <ivanklee86@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
pytest = "^8.2.2"
twine = "^5.1.1"
isort = "^5.13.2"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
